openshift/team-validate-ns-name/team-validate-ns-name.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: team-validate-ns-name
  annotations:
    policies.kyverno.io/title: Validate Team Namespace Schema
    policies.kyverno.io/category: OpenShift
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.6.0
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/subject: Namespace
    policies.kyverno.io/description: >-
      Denies the creation of a namespace if the name of the namespace does
      not follow a specific naming defined by the cluster admins.
spec:
  validationFailureAction: audit
  background: false
  rules:
  - name: team-validate-ns-name
    match:
      any:
      - resources:
          kinds:
            - Namespace
            - ProjectRequest
            - Project
        subjects:
        - kind: Group
          name: "system:authenticated"
    validate:
      message: The only names approved for your namespaces are the ones starting by {{request.userInfo.groups[?contains(@,':') == `false`]}}-*
      deny:
        conditions:
          any:
          - key: "{{request.object.metadata.name}}"
            operator: AnyNotIn
            value: "{{ request.userInfo.groups[?contains(@,':') == `false`][].join('-', [@, '*']) }}"
